nav: fix on small screen
the height of ul was being set to calc(150vh - 80px), which left a huge gap
on the bottom of the section.

fixed to 95vh and background color set to rgba(0, 0, 0, .9).

--- a/gallery/styles.css
+++ b/gallery/styles.css
@@ -182,26 +182,6 @@ ul li a:hover {
   color: #ffffff
 }
 
-.template_section {
-  margin-top: 50px;
-}
-
-.template_section_message {
-  min-height: 100vh;
-  max-width: var(--max-width);
-  margin: auto;
-  padding: 1rem;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 4rem;
-}
-
-.template_section_message {
-  display: flex;
-  justify-content: center;
-}
-
-
 @media (width < 750px) {
   .nav .checkbox {
     opacity: 0;
@@ -209,18 +189,13 @@ ul li a:hover {
     display: block;
   }
 
-  .section {
-    background: linear-gradient(to top, rgba(90, 90, 90, 0.52), rgba(0, 0, 0, 0.73)), url('assets/back.jpg') center center no-repeat;
-    background-size: cover;
-  }
-
   ul {
     position: absolute;
     width: 100%;
-    height: calc(150vh - 85px);
+    height: 90vh;
     left: -100%;
-    top: 85px;
-    background-color: #000000;
+    top: 10vh;
+    background-color: rgba(0, 0, 0, 0.9);
     flex-direction: column;
     justify-content: center;
     gap: 3rem;
@@ -233,17 +208,6 @@ ul li a:hover {
   ul li a {
     font-size: 1.25rem;
   }
-
-  .template_section_message {
-    padding: 10rem 1rem 5rem 1rem;
-    text-align: center;
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .action__btns {
-    margin: auto;
-  }
-
 }
 
 @media (height < 431px) {
@@ -256,10 +220,10 @@ ul li a:hover {
   ul {
     position: absolute;
     width: 100%;
-    height: calc(150vh - 85px);
+    height: 90vh;
     left: -100%;
-    top: 85px;
-    background-color: #000000;
+    top: 10vh;
+    background-color: rgba(0, 0, 0, 0.9);
     flex-direction: column;
     justify-content: center;
     gap: 3rem;
@@ -271,12 +235,6 @@ ul li a:hover {
 
   ul li a {
     font-size: 1.25rem;
-  }
-
-  .template_section_message {
-    padding: 10rem 1rem 5rem 1rem;
-    text-align: center;
-    grid-template-columns: repeat(1, 1fr);
   }
 
   .action__btns {
@@ -304,130 +262,16 @@ ul li a:hover {
   transition: transform 0.3s, box-shadow 0.3s;
 }
 
-#back-to-top {
-  display: none;
-  cursor: pointer;
-  width: 40px;
-  height: 40px;
-  overflow: hidden;
-  text-align: center;
-  border: 1px solid #ddd;
-  color: #f18121;
-  border-radius: 3px;
-  float: left;
-  position: fixed;
-  right: 10px;
-  bottom: 50px;
-  z-index: 900;
-  line-height: 38px;
-  font-size: 20px;
-}
-
 #toTop:active {
   transform: translateY(10px);
   box-shadow: none;
 }
 
-.time-line {
-  width: 1000px;
-  margin: 100px auto;
-  position: relative;
-}
-
-.time-line:after {
-  top: 0;
-  content: '';
-  position: absolute;
-  right: 50%;
-  height: 100%;
-  width: 5px;
-  background: linear-gradient(#ff00e1, #ddff00);
-  border-radius: 50px;
-  animation: LineAnimated 5s linear forwards;
-  z-index: -1;
-}
-
-@keyframes LineAnimated {
-  0% {
-    height: 0;
-  }
-
-  100% {
-    height: 100%;
-  }
-}
-
-.container {
-  width: 50%;
-  position: relative;
-  padding: 10px 20px;
-  animation: Animate-Container 1s linear forwards;
-  opacity: 0;
-  animation-delay: var(--dly);
-}
-
-@keyframes Animate-Container {
-  0% {
-    opacity: 0;
-    transform: translateY(-30px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
-
-.container:nth-child(even) {
-  right: -50%;
-}
-
-.container:nth-child(odd)::before {
-  content: '';
-  position: absolute;
-  height: 20px;
-  width: 20px;
-  background: linear-gradient(#ff00e1, #ddff00);
-  top: 0;
-  right: -7px;
-  border-radius: 50%;
-  z-index: 10;
-}
-
-.container:nth-child(even)::before {
-  content: '';
-  position: absolute;
-  height: 20px;
-  width: 20px;
-  background: linear-gradient(#ff00e1, #ddff00);
-  top: 0;
-  left: -12.5px;
-  border-radius: 50%;
-  z-index: 10;
-}
-
-.text-conten {
-  padding: 20px 30px;
-  box-shadow: 0 5px 10px black;
-  border-radius: 10px;
-  background-color: white;
-  color: black;
-}
-
-.text-content h1 {
-  font-size: 25px;
-}
-
-.text-content p {
-  font-size: 14px;
-  margin-top: 10px;
-}
-
-.text-conten img {
-  width: 400px;
-}
-
 .footer {
+  position: absolute;
+  bottom: 1%;
+  left: 0;
+  right: 0;
   background-color: #000;
   text-align: center;
 }
@@ -437,4 +281,10 @@ ul li a:hover {
   color: rgba(255, 255, 255, .6);
   background-color: #000;
   text-align: center;
+}
+
+.timeline {
+  border: 5px solid red;
+  max-width: var(--max-width);
+  margin: auto;
 }
