--- a/members/styles.css
+++ b/members/styles.css
@@ -236,18 +236,13 @@ ul li a:hover {
     display: block;
   }
 
-  .section {
-    background: linear-gradient(to top, rgba(90, 90, 90, 0.52), rgba(0, 0, 0, 0.73)), url('assets/back.webp') center center no-repeat;
-    background-size: cover;
-  }
-
   ul {
     position: absolute;
     width: 100%;
-    height: calc(150vh - 85px);
+    height: 90vh;
     left: -100%;
-    top: 85px;
-    background-color: #000000;
+    top: 10vh;
+    background-color: rgba(0, 0, 0, 0.9);
     flex-direction: column;
     justify-content: center;
     gap: 3rem;
@@ -259,16 +254,6 @@ ul li a:hover {
 
   ul li a {
     font-size: 1.25rem;
-  }
-
-  .template_section_message {
-    padding: 10rem 1rem 5rem 1rem;
-    text-align: center;
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .action__btns {
-    margin: auto;
   }
 
 }
@@ -283,7 +268,7 @@ ul li a:hover {
   ul {
     position: absolute;
     width: 100%;
-    height: calc(150vh - 85px);
+    height: 90vh;
     left: -100%;
     top: 85px;
     background-color: #000000;
@@ -815,6 +800,10 @@ ul li a:hover {
 }
 
 .footer {
+  position: absolute;
+  bottom: 1%;
+  left: 0;
+  right: 0;
   background-color: #000;
   text-align: center;
 }
