--- a/speech/styles.css
+++ b/speech/styles.css
@@ -299,10 +299,10 @@ ul li a:hover {
   ul {
     position: absolute;
     width: 100%;
-    height: calc(150vh - 85px);
+    height: 90vh;
     left: -100%;
-    top: 85px;
-    background-color: #000000;
+    top: 10vh;
+    background-color: rgba(0, 0, 0, 0.9);
     flex-direction: column;
     justify-content: center;
     gap: 3rem;
@@ -336,10 +336,10 @@ ul li a:hover {
   ul {
     position: absolute;
     width: 100%;
-    height: calc(150vh - 85px);
+    height: 90vh;
     left: -100%;
-    top: 85px;
-    background-color: #000000;
+    top: 10vh;
+    background-color: rgba(0, 0, 0, 0.9);
     flex-direction: column;
     justify-content: center;
     gap: 3rem;
@@ -407,6 +407,10 @@ ul li a:hover {
 }
 
 .footer {
+  position: absolute;
+  bottom: 1%;
+  left: 0;
+  right: 0;
   background-color: #000;
   text-align: center;
 }
