--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,10 @@ html {
 }
 
 .footer {
+  position: absolute;
+  bottom: 1%;
+  left: 0;
+  right: 0;
   background-color: #000;
   text-align: center;
 }
@@ -296,10 +300,10 @@ ul li a:hover {
   ul {
     position: absolute;
     width: 100%;
-    height: calc(150vh - 85px);
+    height: 90vh;
     left: -100%;
-    top: 85px;
-    background-color: #000000;
+    top: 10vh;
+    background-color: rgba(0, 0, 0, 0.9);
     flex-direction: column;
     justify-content: center;
     gap: 3rem;
@@ -329,10 +333,10 @@ ul li a:hover {
   ul {
     position: absolute;
     width: 100%;
-    height: calc(150vh - 85px);
+    height: 90vh;
     left: -100%;
-    top: 85px;
-    background-color: #000000;
+    top: 10vh;
+    background-color: rgba(0, 0, 0, 0.9);
     flex-direction: column;
     justify-content: center;
     gap: 3rem;
